--- a/frontend/public/about.html
+++ b/frontend/public/about.html
@@ -1,16 +1,12 @@
-<h3>gsworkspace</h3>
-<p>An infinite canvas application for creative work.</p>
+<h1>gsworkspace</h1>
+<p><em>version 0.1.0</em></p>
+<br />
+<p>Design by <a href="https://www.rms80.com">rms80</a>, Coding by <a href="https://claude.com/product/claude-code">Claude Code</a>.</p>
+<br/>
+<p>Github: <a href="https://github.com/rms80/gsworkspace">https://github.com/rms80/gsworkspace</a></p>
+<br />
+<p>License: <a href="https://github.com/rms80/gsworkspace/blob/main/LICENSE">The Unlicense</a></p>
+<br />
 
-<h4>Features</h4>
-<ul>
-  <li>Infinite pan and zoom canvas</li>
-  <li>Text blocks and images</li>
-  <li>LLM-powered prompt blocks</li>
-  <li>Image generation prompts</li>
-  <li>HTML generation prompts</li>
-  <li>Scene management with import/export</li>
-  <li>Offline mode support</li>
-</ul>
 
-<h4>Version</h4>
-<p>0.1.0</p>
+
